Updated to Bootstrap 4 - Alpha 3

--- a/source/regrid/_mixins.scss
+++ b/source/regrid/_mixins.scss
@@ -14,7 +14,7 @@
             @for $i from $columns through 1 {
                 @for $j from $i through 1 {
                     .col-#{$breakpoint}-#{$i} .row .col-#{$breakpoint}-#{$j} {
-                        @include make-col-span($j, $i);
+                        @include make-col($j, $i);
                     }
                 }
             }
